istio/virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpd-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - httpd-gateway
  http:
  - route:
    - destination:
        host: httpd-service
        subset: v1
      weight: 80
    - destination:
        host: httpd-service
        subset: v2
      weight: 20
